# midi-arpeggiator

./: Cargo.toml  README.md  settings.json  test.json
hardware/: SETUP.md
src/: arpeggiator.rs  arpeggio.rs  main.rs  midi.rs  notename.rs  presets.rs  settings.rs  status.rs
src/arpeggiator/: full_length.rs  synced.rs  timed.rs
src/arpeggio/: full_length.rs  synced.rs  timed.rs
