[package]
name = "midi-arpeggiator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wmidi = "4.0.6"
strum = "0.24.1"
strum_macros = "0.24.1"
nonblock = "0.2.0"
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
